--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts --ignore ./db",
+    "dev": "nodemon src/index.ts --ignore ./db",
+    "start": "ts-node src/index.ts --ignore ./db",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
